objects/LegacyUserID__c.object
<CustomObject>
    <description>SFDC1-8247 Legacy User ID object provides ability to have multiple Legacy System IDs for a user.</description>
    <fields>
        <fullName>LegacyIDUnique__c</fullName>
        <description>SFDC1-8247 Legacy ID unique value</description>
        <externalId>true</externalId>
        <inlineHelpText>Legacy ID unique value</inlineHelpText>
        <label>LegacyIDUnique</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <description>SFDC1-8247 External ID for legacy system</description>
        <externalId>true</externalId>
        <inlineHelpText>External ID for legacy system</inlineHelpText>
        <label>LegacyID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacySystem__c</fullName>
        <description>SFDC1-8247 Legacy System value set</description>
        <inlineHelpText>Legacy System value</inlineHelpText>
        <label>LegacySystem</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LegacySystem</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PKIDUserLegacy__c</fullName>
        <description>SFDC1-8247 PK field for Data Migration Support</description>
        <displayFormat>UtL{000000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>A unique auto generated ID for the User Legacy ID record.</inlineHelpText>
        <label>PKIDUserLegacy</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-8247 Lookup to the User object</description>
        <inlineHelpText>Lookup to the User object</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LegacyUserIDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Legacy User ID</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Legacy User IDs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>